add img to falder

--- a/index.html
+++ b/index.html
@@ -203,20 +203,20 @@
 
         <!--Block 9-10 Pavlo start-->
         <div class="carusel">
-            <img width="300" src="img/carousel-one.jpg" alt="one">
-            <h2>20% of all T-Shirt</h2>
+            <img width="300" src="img/carousel/carousel-one.jpg" alt="one">
+            <p>20% of all T-Shirt</p>
             <a href="#">Shop Collection</a>
             <br>
-            <img width="300" src="img/carousel-two.jpg" alt="two">
-            <h2>25% OFF All Trainers </h2>
+            <img width="300" src="img/carousel/carousel-two.jpg" alt="two">
+            <p>25% OFF All Trainers </p>
             <a href="#">Shop Collection</a>
             <br>
-            <img width="300" src="img/carousel-three.jpg" alt="three">
-            <h2>30% OFF ALL Jacket</h2>
+            <img width="300" src="img/carousel/carousel-three.jpg" alt="three">
+            <p>30% OFF ALL Jacket</p>
             <a href="#">Shop Collection</a>
             <br>
-            <img width="300" src="img/carousel-four.jpg" alt="four">
-            <h2>25% OFF All Trainers </h2>
+            <img width="300" src="img/carousel/carousel-four.jpg" alt="four">
+            <p>25% OFF All Trainers </p>
             <a href="#">Shop Collection</a>
         </div>
 
@@ -224,73 +224,73 @@
             <div>
                 <h1>MAIN COLLECTION</h1>
                 <hr style="width:50%;">
-                <h2>Shop our main fitness collection for men and women represented by the famous brands.</h2>
-                <h4>Women</h4>
-                <h4>Men</h4>
-                <h4>Shoes</h4>
+                <p>Shop our main fitness collection for men and women represented by the famous brands.</p>
+                <p>Women</p>
+                <p>Men</p>
+                <p>Shoes</p>
             </div>
             <div>
                 <div>
-                    <img src="img/woman.jpg" alt="woman">
+                    <img src="img/MAIN COLLECTION/woman-dark.jpg" alt="woman-dark">
                     <br>
                     <a href="#">Puma Sports Bra</a>
-                    <h2>$12,00USD</h2>
+                    <p>$12,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/woman-one.jpg" alt="woman-one">
+                    <img src="img/MAIN COLLECTION/woman-pink-dark.jpg" alt="woman-pink-dark">
                     <br>
                     <a href="#">Reebok Long Sleeve Top</a>
-                    <h3>$18,00USD</h3>
+                    <p>$18,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/woman-two.jpg" alt="woman-two">
+                    <img src="img/MAIN COLLECTION/woman-grey-dark.jpg" alt="woman-grey-dark">
                     <br>
                     <a href="#">Quicksilver Workout Top</a>
-                    <h3>$12,00USD</h3>
+                    <p>$12,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/man.jpg" alt="man">
+                    <img src="img/MAIN COLLECTION/man-black-T-Shirt.jpg" alt="man-black-T-Shirt">
                     <br>
                     <a href="#">Adidas Compression Tee</a>
-                    <h3>$33,00USD</h3>
+                    <p>$33,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/man-one.jpg" alt="man-one">
+                    <img src="img/MAIN COLLECTION/man-white-T-shirt.jpg" alt="man-white-T-shirt">
                     <br>
                     <a href="#">Reebok Fitness Jacket</a>
-                    <h3>$52,00USD</h3>
+                    <p>$52,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/man-two.jpg" alt="man-two">
+                    <img src="img/MAIN COLLECTION/man-orange-T-Shirt.jpg" alt="man-orange-T-Shirt">
                     <br>
                     <a href="#">Quicksilver Tech T-Shirt</a>
-                    <h3>$21,00USD</h3>
+                    <p>$21,00USD</p>
                     <button>"Add to Cart</button>
                 </div>
                 <div>
                     <img src="img/sneakers.jpg" alt="sneakers">
                     <br>
                     <a href="#">Nike Amanda Running Shoes</a>
-                    <h3>$120,00USD</h3>
+                    <p>$120,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
                     <img src="img/sneakers-one.jpg" alt="sneakers-one">
                     <br>
                     <a href="#">Puma Basket Shoes</a>
-                    <h3>$140,00USD</h3>
+                    <p>$140,00USD</p>
                     <button>"Add to Cart</button>
                 </div>
                 <div>
                     <img src="img/sneakers-two.jpg" alt="sneakers-two">
                     <br>
                     <a href="#">Adidas Campus</a>
-                    <h3>$130,00USD</h3>
+                    <p>$130,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
 
