add img to falder

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <!--Block 7-8 end-->
 
         <!--Block 9-10 Pavlo start-->
-        <div class="carusel">
+        <div class="carousel">
             <img width="300" src="img/carousel/carousel-one.jpg" alt="one">
             <p>20% of all T-Shirt</p>
             <a href="#">Shop Collection</a>
@@ -278,21 +278,21 @@
                     <button>"Add to Cart</button>
                 </div>
                 <div>
-                    <img src="img/sneakers.jpg" alt="sneakers">
+                    <img src="img/MAIN COLLECTION/sneakers-grey.jpg" alt="sneakers-grey">
                     <br>
                     <a href="#">Nike Amanda Running Shoes</a>
                     <p>$120,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/sneakers-one.jpg" alt="sneakers-one">
+                    <img src="img/MAIN COLLECTION/sneakers-black.jpg" alt="sneakers-black">
                     <br>
                     <a href="#">Puma Basket Shoes</a>
                     <p>$140,00USD</p>
                     <button>"Add to Cart</button>
                 </div>
                 <div>
-                    <img src="img/sneakers-two.jpg" alt="sneakers-two">
+                    <img src="img/MAIN COLLECTION/sneakers-orange.jpg" alt="sneakers-orange">
                     <br>
                     <a href="#">Adidas Campus</a>
                     <p>$130,00USD</p>
