--- a/index.html
+++ b/index.html
@@ -236,42 +236,42 @@
             </div>
             <div>
                 <div>
-                    <img src="img/MAIN COLLECTION/woman-dark.jpg" alt="woman-dark">
+                    <img src="img/main-collection/woman-dark.jpg" alt="woman-dark">
                     <br>
                     <a href="#">Puma Sports Bra</a>
                     <p>$12,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/woman-pink-dark.jpg" alt="woman-pink-dark">
+                    <img src="img/main-collection/woman-pink-dark.jpg" alt="woman-pink-dark">
                     <br>
                     <a href="#">Reebok Long Sleeve Top</a>
                     <p>$18,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/woman-grey-dark.jpg" alt="woman-grey-dark">
+                    <img src="img/main-collection/woman-grey-dark.jpg" alt="woman-grey-dark">
                     <br>
                     <a href="#">Quicksilver Workout Top</a>
                     <p>$12,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/man-black-T-Shirt.jpg" alt="man-black-T-Shirt">
+                    <img src="img/main-collection/man-black-t-shirt.jpg" alt="man-black-t-shirt">
                     <br>
                     <a href="#">Adidas Compression Tee</a>
                     <p>$33,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/man-white-T-shirt.jpg" alt="man-white-T-shirt">
+                    <img src="img/main-collection/man-white-t-shirt.jpg" alt="man-white-t-shirt">
                     <br>
                     <a href="#">Reebok Fitness Jacket</a>
                     <p>$52,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/man-orange-T-Shirt.jpg" alt="man-orange-T-Shirt">
+                    <img src="img/main-collection/man-orange-t-shirt.jpg" alt="man-orange-t-shirt">
                     <br>
                     <a href="#">Quicksilver Tech T-Shirt</a>
                     <p>$21,00USD</p>
