--- a/index.html
+++ b/index.html
@@ -278,21 +278,21 @@
                     <button>"Add to Cart</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/sneakers-grey.jpg" alt="sneakers-grey">
+                    <img src="img/main-collection/sneakers-grey.jpg" alt="sneakers-grey">
                     <br>
                     <a href="#">Nike Amanda Running Shoes</a>
                     <p>$120,00USD</p>
                     <button>"Add to Cart"</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/sneakers-black.jpg" alt="sneakers-black">
+                    <img src="img/main-collection/sneakers-black.jpg" alt="sneakers-black">
                     <br>
                     <a href="#">Puma Basket Shoes</a>
                     <p>$140,00USD</p>
                     <button>"Add to Cart</button>
                 </div>
                 <div>
-                    <img src="img/MAIN COLLECTION/sneakers-orange.jpg" alt="sneakers-orange">
+                    <img src="img/main-collection/sneakers-orange.jpg" alt="sneakers-orange">
                     <br>
                     <a href="#">Adidas Campus</a>
                     <p>$130,00USD</p>
