--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/css-main-collection.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
@@ -227,9 +228,9 @@
 
         <div id="collection">
             <div>
-                <h1>MAIN COLLECTION</h1>
+                <h1 class="main-collection">MAIN COLLECTION.</h1>
                 <hr style="width:50%;">
-                <p>Shop our main fitness collection for men and women represented by the famous brands.</p>
+                <p class="shop-our-main">Shop our main fitness collection for men and women represented by the famous brands.</p>
                 <p>Women</p>
                 <p>Men</p>
                 <p>Shoes</p>
