--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
                 We’ve extended our returns period to 30 days.
             </p>
         </div>
-        <div class="head">
+        <div class="container">
             <div class="logo">
-                <img width="200" src="img/logo.svg" alt="logo">
+                <a href="#"> <img width="200" src="img/logo.svg" alt="logo"></a>
+                <label class="burger-icon" for="burger-checkbox">☰</label>
+                <input type="checkbox" id="burger-checkbox" />
             </div>
             <div class="nav">
                 <nav>
@@ -34,11 +36,11 @@
             </div>
             <div class="social-media-logos">
                 <nav>
-                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png"
+                    <a href="https://www.youtube.com/"> <img width="35" src="img/icons/icon-youtube.png"
                             alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook.png"
+                    <a href="https://www.facebook.com/"> <img width="25" src="img/icons/icon-facebook.png"
                             alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram.png"
+                    <a href="https://www.instagram.com/"> <img width="25" src="img/icons/icon-instagram.png"
                             alt="Instagram logo"></a>
                 </nav>
             </div>
@@ -46,12 +48,9 @@
     </header>
     <main>
         <div class="front-page">
-            <div class="second-block-background">
-                <img src="img/background.jfif" alt="Basketball player">
-            </div>
             <div class="front-page-text">
-                <p><b>ASPIRE TO MORE</b></p>
-                <h1><b>NEW COLLECTIONS <br> BY TOP BRANDS.</b></h1>
+                <p>ASPIRE TO MORE</p>
+                <h1>NEW COLLECTIONS <br> BY TOP BRANDS.</h1>
             </div>
             <div class="shop-now-button">
                 <a href="#collection">Shop Now</a>
@@ -230,7 +229,8 @@
             <div>
                 <h1 class="main-collection">MAIN COLLECTION.</h1>
                 <hr style="width:50%;">
-                <p class="shop-our-main">Shop our main fitness collection for men and women represented by the famous brands.</p>
+                <p class="shop-our-main">Shop our main fitness collection for men and women represented by the famous
+                    brands.</p>
                 <p>Women</p>
                 <p>Men</p>
                 <p>Shoes</p>
@@ -325,7 +325,7 @@
                 comfortable.</p>
             <a href="#learn-more">Learn More</a>
         </div>
-        <div class="blog">
+        <div id="blog">
             <section>
                 <h3>Blog</h3>
                 <p>Read the latest articles from our experts.</p>
@@ -355,7 +355,7 @@
                 https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.4185754150153!2d-74.18139188459445!3d40.73081427932994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2537102f5f5df%3A0xc3d5dc357162b4ec!2zMzI1IFVuaXZlcnNpdHkgQXZlLCBOZXdhcmssIE5KIDA3MTAyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1636233117165!5m2!1sru!2sua"
                 width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <section class="contacts">
+        <section id="contact-us">
             <h2>Contacts.</h2>
             <address>325 University Ave
                 Newark, NJ 07102</address>
@@ -395,9 +395,12 @@
                 <h3>Follow Us</h3>
                 <hr>
                 <nav>
-                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png" alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook.png" alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram.png" alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png"
+                            alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook.png"
+                            alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram.png"
+                            alt="Instagram logo"></a>
                 </nav>
             </div>
             <hr>
