--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
     <main>
         <div class="front-page">
             <div class="front-page-text">
-                <p>ASPIRE TO MORE</p>
-                <h1>NEW COLLECTIONS <br> BY TOP BRANDS.</h1>
+                <div class="front-page-topbrand">
+                    <p>ASPIRE TO MORE</p>
+                    <h1>NEW <span id="front-page-collections">COLLECTIONS</span> <br> BY TOP BRANDS<span
+                            id="front-page-dot">.</span></h1>
+                </div>
+                <div class="front-page-button">
+                </div>
+                <a href="#collection"> <button class="shop-now-button">Shop Now <span>&#8594;</span></button></a>
             </div>
-            <div class="shop-now-button">
-                <a href="#collection">Shop Now</a>
-            </div>
+        </div>
         </div>
 
         <!--Block 1-2 end-->
