Fixed validator problem

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                             id="front-page-dot">.</span></h1>
                 </div>
                 <div class="front-page-button">
+                    <a href="#collection">Shop Now &#8594;</a>
                 </div>
-                <a href="#collection"> <button class="shop-now-button">Shop Now <span>&#8594;</span></button></a>
             </div>
         </div>
-        </div>
+
+
 
         <!--Block 1-2 end-->
 
