--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Workout</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/css-main-collection.css">
+    <link rel="stylesheet" href="css/keep-fit-with-comfort.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
@@ -228,7 +229,7 @@
         <div id="collection">
             <div>
                 <h1 class="main-collection">MAIN COLLECTION.</h1>
-                <hr style="width:50%;">
+                <hr style="height: 2px; width:8%; background-color: #e0e0e0;">
                 <p class="shop-our-main">Shop our main fitness collection for men and women represented by the famous
                     brands.</p>
                 <p>Women</p>
@@ -315,16 +316,22 @@
                 <p>Here must be countdown</p>
             </div>
         </section>
-        <div class="workout">
-            <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
-            <p>100% ORIGINAL BRANDS</p>
-            <h2>KEEP FIT WITH COMFORT.</h2>
-            <p><span>Top Brands.</span><span>Delivery With DHL.</span><span>Easy return</span></p>
-            <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for
-                better. We work only with the best sport brands to ensure that your training is really effective and
-                comfortable.</p>
-            <a href="#learn-more">Learn More</a>
+        <!--Pavlo-->
+        <div id="workout-woman">
+            <div class="keep-fit-with-confort">
+                <p>100% ORIGINAL BRANDS</p>
+                <h2>KEEP FIT WITH COMFORT.</h2>
+                <p><span>Top Brands.</span><span>Delivery With DHL.</span><span>Easy return</span></p>
+                <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for
+                    better. We work only with the best sport brands to ensure that your training is really effective and
+                    comfortable.</p>
+                <button class="learn-more"><a  href="#learn-more">Learn More</a></button>
+            </div>
+            <div class="workout-woman-img">
+                <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
+            </div>
         </div>
+        <!--END Pavlo-->
         <div id="blog">
             <section>
                 <h3>Blog</h3>
