Aded styles for block About Us

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/css-main-collection.css">
     <link rel="stylesheet" href="css/keep-fit-with-comfort.css">
+    <link rel="stylesheet" href="css/about-us.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
@@ -107,11 +108,9 @@
 
         <!--Block 5-6 Artem start-->
         <div id="about-us">
-            <div class="img-about-us">
                 <img src="img/about-us/two-spotsmen.jpg" alt="Two Men">
-            </div>
             <section class="content-about-us">
-                <h2><span class="header-about-us">About Us</span><span class="header-dot-style">.</span></h2>
+                <h2 class="header-about-us">About Us<span class="header-dot-style">.</span></h2>
                 <hr>
                 <p class="info-about-us">
                     Workout is an American fitness store created by fitness geeks for those who love sport and try
@@ -126,21 +125,18 @@
                     we keep selling
                     comfortable and high-tech clothes and shoes for your outstanding results.</p>
                 <div class="social-media-logo">
-                    <a href="https://www.youtube.com/"><img width="50" src="img/icons/icon-youtube.png"
+                    <a href="https://www.youtube.com/"><img width="95" src="img/icons/icon-youtube.png"
                             alt="Youtube icon"></a>
-                    <a href="https://www.facebook.com/"><img width="35" src="img/icons/icon-facebook.png"
+                    <a href="https://www.facebook.com/"><img width="85" src="img/icons/icon-facebook.png"
                             alt="Facebook icon"></a>
-                    <a href="https://www.instagram.com/"><img width="35" src="img/icons/icon-instagram.png"
+                    <a href="https://www.instagram.com/"><img width="85" src="img/icons/icon-instagram.png"
                             alt="Instagram icon"></a>
                 </div>
             </section>
         </div>
         <div class="new-fitness-collection">
-            <div class="fitness-collection-image">
-                <img src="img/about-us/new-trend.jpg" alt="Sport Women">
-            </div>
-            <p>Trending.</p>
-            <h2><span class="fitnes-collection-header">New Fitness Collection</span><span
+            <p class="new-fitness-collection-text">Trending.</p>
+            <h2 class="fitnes-collection-header">New Fitness Collection<span
                     class="header-dot-style">.</span></h2>
             <div class="link-collection">
                 <a href="#collection">Shop Now</a>
