Block about-us ready

--- a/index.html
+++ b/index.html
@@ -136,10 +136,12 @@
         </div>
         <div class="new-fitness-collection">
             <p class="new-fitness-collection-text">Trending.</p>
-            <h2 class="fitnes-collection-header">New Fitness Collection<span
-                    class="header-dot-style">.</span></h2>
+            <h2>
+                New Fitness<br>Collection
+                <span class="header-dot-style">.</span>
+            </h2>
             <div class="link-collection">
-                <a href="#collection">Shop Now</a>
+                <a href="#collection">Shop Now &#8594;</a>
             </div>
         </div>
         <!--Block 5-6 end-->
