--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/css-main-collection.css">
     <link rel="stylesheet" href="css/keep-fit-with-comfort.css">
     <link rel="stylesheet" href="css/about-us.css">
+    <link rel="stylesheet" href="css/newsletter.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
@@ -346,8 +347,12 @@
             </section>
         </div>
         <div class="our-newsletter">
-            <img src="img/newsletter/newsletter-background.png" alt="logo">
+            <div class="special-offer">
+            <img width="40" src="img/icons/mail-logo.svg" alt="Mail logo">
+        </div>
+    <div class="text-offer">
             <p> 10% OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
+            </div>
             <form action="#">
                 <ul>
                     <li>
