--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
         </div>
 
         <!--Block 9-10 end-->
+
+        <!--Block ira-->
         <section class="deal-of-the-month">
             <h2>DEAL OF THE MONTH.</h2>
             <p>PUMA SPORTS BRA $50 $70</p>
@@ -320,6 +322,15 @@
                 <p>Here must be countdown</p>
             </div>
         </section>
+
+        <div>
+            <p>NEW ARRIVALS.</p>
+            <p>Be the first to buy new items by leading brands.</p>
+            <button>More product</button>
+        </div>
+
+
+        <!--Block ira-->
         <!--Pavlo-->
         <div id="workout-woman">
             <div class="keep-fit-with-confort">
