--- a/index.html
+++ b/index.html
@@ -67,20 +67,26 @@
 
         <!--Block 1-2 end-->
 
-        <!--Block 3-4 Ira start-->
+        <!--Block Ira start-->
 
         <div class="menu">
-            <img width="300" src="img/man-with-sneakers.svg" alt="men with sneakers">
-            <p>NEW ARRIWALS.</p>
-            <button>Shop Collection</button>
+            <div>
+              <img width="300" src="img/man-with-sneakers.svg" alt="men with sneakers">
+              <p>NEW ARRIWALS.</p>
+              <button>Shop Collection</button>
+            </div>
 
-            <img width="300" src="img/skateboarder.png" alt="white sneakers on a skateboard">
-            <p>TRAINERS.</p>
-            <button>Shop Collection</button>
+            <div>
+              <img width="300" src="img/skateboarder.png" alt="white sneakers on a skateboard">
+              <p>TRAINERS.</p>
+              <button>Shop Collection</button>
+            </div>
 
-            <img width="300" src="img/clothes.png" alt="topic and bottle">
-            <p>HOT SALE.</p>
-            <button>Shop Collection</button>
+            <div>
+              <img width="300" src="img/clothes.png" alt="topic and bottle">
+              <p>HOT SALE.</p>
+              <button>Shop Collection</button>
+            </div>
 
         </div>
 
@@ -104,8 +110,7 @@
 
         </div>
 
-
-        <!--Block 3-4 end-->
+        <!--Block Ira end-->
 
         <!--Block 5-6 Artem start-->
         <div id="about-us">
