--- a/index.html
+++ b/index.html
@@ -346,8 +346,17 @@
             <button>More product</button>
         </div>
 
+        <div>
+            <img src="img/480.jfif" alt="turquoise-sneakers">
+            <p>$62,00</p>
+            <button>Add to Card</button>
+        </div>
 
-        <!--Block ira-->
+        
+
+
+        <!--Block ira end-->
+
         <!--Pavlo-->
         <div id="workout-woman">
             <div class="keep-fit-with-confort">
