--- a/index.html
+++ b/index.html
@@ -354,8 +354,29 @@
             <button>Add to Card</button>
         </div>
 
-        
+        <div>
+            <img src="img/480 (2).jfif" alt="black-sneakers">
+            <p>$60,00</p>
+            <button>Add to Card</button>
+        </div>
 
+        <div>
+            <img src="img/480 (1).jfif" alt="girl-in-a-blue-jacket">
+            <p>$85,00</p>
+            <button>Add to Card</button>
+        </div>
+
+        <div>
+            <img src="img/480 (3).jfif" alt="girl-in-a-red-coat">
+            <p>$60,00</p>
+            <button>Add to Card</button>
+        </div>
+
+        <div>
+            <img src="img/480 (4).jfif" alt="black-sneakers-with-a-white-stripe">
+            <p>$200,00</p>
+            <button>Add to Card</button>
+        </div>
 
         <!--Block ira end-->
 
