--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="return-period">
             <p>
-                We’ve extended our returns period period to 30 days.
+                We’ve extended our returns period to 30 days.
             </p>
         </div>
         <div class="container">
