--- a/index.html
+++ b/index.html
@@ -237,22 +237,22 @@
         <!--Block 9-10 Pavlo start-->
         <div class="carousel-discounts">
             <div>
-                <img width="300" src="img/carousel/carousel-one.jpg" alt="one">
+                <img src="img/carousel/carousel-one.jpg" alt="one">
                 <p>20% of all T-Shirt</p>
                 <a href="#">Shop Collection</a>
             </div>
             <div>
-                <img width="300" src="img/carousel/carousel-two.jpg" alt="two">
+                <img src="img/carousel/carousel-two.jpg" alt="two">
                 <p>25% OFF All Trainers </p>
                 <a href="#">Shop Collection</a>
             </div>
             <div>
-                <img width="300" src="img/carousel/carousel-three.jpg" alt="three">
+                <img src="img/carousel/carousel-three.jpg" alt="three">
                 <p>30% OFF ALL Jacket</p>
                 <a href="#">Shop Collection</a>
             </div>
             <div>
-                <img width="300" src="img/carousel/carousel-four.jpg" alt="four">
+                <img src="img/carousel/carousel-four.jpg" alt="four">
                 <p>25% OFF All Trainers </p>
                 <a href="#">Shop Collection</a>
             </div>
