--- a/index.html
+++ b/index.html
@@ -335,65 +335,70 @@
         <!--Block 7-8 Vova start-->
 
         <!-- Mid Season Sele Section -->
-        <section id="sale" class="mid-season-sale-section">
-            <div>
-                <h2 class="mss-header">
+        <div id="sale" class="mid-season-sale-section">
+            <div class="mid-season-sale-header">
+                <h2 class="mid-season-sale-header">
                     Mid-Season Sale<span class="header-dot-style">.</span>
                 </h2>
-                <!-- header-buttom-border-dash or span? -->
-                <span class="mss-dash"></span>
+                <hr class="mid-season-sale-dash">
                 <p>Shop clothes and trainers that are chosen by thousands of our clients.
                     Click on the image to see the product details and click Add to Cart to make the purchase.
                     We are committed to give you the best buying experience!</p>
             </div>
-            <div class="mss-products-section">
-                <div class="mss-product">
-                    <img src="img/adidas-cloudfoam-trainers.jpg" alt="adidas-cloudfoam-trainers">
-                    <h5 class="mss-product-tittle">Adidas Cloudfoam Trainers</h5>
-                    <span class="mss-product-price">$60,00</span>
+            <div class="mid-season-sale-products-section">
+                <div class="mid-season-sale-product">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/adidas-cloudfoam-trainers.jpg" alt="adidas-cloudfoam-trainers">
+                    <div class="mid-season-sale-product-info">
+                    <h5 class="mid-season-sale-product-tittle">Adidas Cloudfoam Trainers</h5>
+                    <span class="mid-season-sale-product-price">$60,00</span>
                     <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                    </div>
                 </div>
-                <div class="mss-product">
-                    <img src="img/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
-                    <h5 class="mss-product-tittle">Reebok Workout Shorts</h5>
-                    <span class="mss-product-price">$25,00</span>
-                    <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                <div class="mid-season-sale-product">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
+                    <div class="mid-season-sale-product-info">
+                        <h5 class="mid-season-sale-product-tittle">Reebok Workout Shorts</h5>
+                        <span class="mid-season-sale-product-price">$25,00</span>
+                        <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                    </div>
                 </div>
-                <div class="mss-product">
-                    <img src="img/puma-fitness-shoes-grey.jpg" alt="puma-fitness-shoes-grey">
-                    <h5 class="mss-product-tittle">Puma Fitness Shoes in Grey</h5>
-                    <span class="mss-product-price">$60,00</span>
-                    <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                <div class="mid-season-sale-product">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/puma-fitness-shoes-grey.jpg" alt="puma-fitness-shoes-grey">
+                    <div class="mid-season-sale-product-info">
+                        <h5 class="mid-season-sale-product-tittle">Puma Fitness Shoes in Grey</h5>
+                        <span class="mid-season-sale-product-price">$60,00</span>
+                        <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                    </div>
                 </div>
-                <div class="mss-product">
-                    <img src="img/puma-essentia-tank-top.jpg" alt="puma-essentia-tank-top">
-                    <h5 class="mss-product-tittle">Puma Essential Tank Top</h5>
-                    <span class="mss-product-price">$43,00</span>
-                    <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                <div class="mid-season-sale-product">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/puma-essentia-tank-top.jpg" alt="puma-essentia-tank-top">
+                    <div class="mid-season-sale-product-info">
+                        <h5 class="mid-season-sale-product-tittle">Puma Essential Tank Top</h5>
+                        <span class="mid-season-sale-product-price">$43,00</span>
+                        <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                    </div>
                 </div>
-                <div class="mss-product">
-                    <img src="img/nike-classic-polo-shirt.jpg" alt="nike-classic-polo-shirt">
-                    <h5 class="mss-product-tittle">Nike Classic Polo T-Shirt</h5>
-                    <span class="mss-product-price">$23,00</span>
-                    <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                <div class="mid-season-sale-product">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/nike-classic-polo-shirt.jpg" alt="nike-classic-polo-shirt">
+                    <div class="mid-season-sale-product-info">
+                        <h5 class="mid-season-sale-product-tittle">Nike Classic Polo T-Shirt</h5>
+                        <span class="mid-season-sale-product-price">$23,00</span>
+                        <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                    </div>
                 </div>
             </div>
-        </section>
-
+        </div>
+        
         <!-- Get your discount section -->
-        <section class="get-your-discount-section">
-            <img src="img/get-your-discount-background.png" alt="">
-            <div class="">
+        <div class="get-your-discount-section">
+            <div class="get-your-discount-info">
                 <h4>Sale of the month</h4>
                 <h2>
                     Get Your Discount<span class="header-dot-style">.</span>
                 </h2>
                 <a href="#" class="btn-shop-now">Shop now</a>
             </div>
-            <!-- One empty block with the same dimensions -->
-            <div>
-            </div>
-        </section>
+        </div>
         <!--Block 7-8 end-->
 
         <!--Block 9-10 Pavlo start-->
