added link for css styles mid-season-get-your-discount

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/carousel-discounts.css">
     <link rel="stylesheet" href="css/about-us.css">
     <link rel="stylesheet" href="css/newsletter.css">
+    <link rel="stylesheet" href="css/mid-season-get-your-discount.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
@@ -334,7 +335,7 @@
                     <a href="#" class="btn-add-to-cart">Add to Cart</a>
                     </div>
                 </div>
-                <div class="mid-season-sale-product">
+                <div class="mid-season-sgit pale-product">
                     <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
                     <div class="mid-season-sale-product-info">
                         <h5 class="mid-season-sale-product-tittle">Reebok Workout Shorts</h5>
