added class for carousel image

--- a/index.html
+++ b/index.html
@@ -385,22 +385,22 @@
         <!--Block 9-10 Pavlo start-->
         <div class="carousel-discounts">
             <div>
-                <img src="img/carousel/carousel-one.jpg" alt="one">
+                <img class="carousel-discounts-img" src="img/carousel/carousel-one.jpg" alt="one">
                 <p>20% of all T-Shirt</p>
                 <a href="#">Shop Collection</a>
             </div>
             <div>
-                <img src="img/carousel/carousel-two.jpg" alt="two">
+                <img class="carousel-discounts-img" src="img/carousel/carousel-two.jpg" alt="two">
                 <p>25% OFF All Trainers </p>
                 <a href="#">Shop Collection</a>
             </div>
             <div>
-                <img src="img/carousel/carousel-three.jpg" alt="three">
+                <img class="carousel-discounts-img" src="img/carousel/carousel-three.jpg" alt="three">
                 <p>30% OFF ALL Jacket</p>
                 <a href="#">Shop Collection</a>
             </div>
             <div>
-                <img src="img/carousel/carousel-four.jpg" alt="four">
+                <img class="carousel-discounts-img" src="img/carousel/carousel-four.jpg" alt="four">
                 <p>25% OFF All Trainers </p>
                 <a href="#">Shop Collection</a>
             </div>
