Changes in product page

--- a/product-page.html
+++ b/product-page.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Workout</title>
+    <link rel="stylesheet" type="text/html" href="index.html">
+    <link rel="stylesheet" href="css/product-page.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/icons/icon-company.png">
 </head>
 <body>
-    
+    <header>
+        <div class="return-period">
+            <p>
+                We’ve extended our returns period to 30 days.
+            </p>
+        </div>
+        <div class="container">
+            <div class="logo">
+                <a href="#"> <img width="200" src="img/logo.svg" alt="logo"></a>
+            </div>
+            <div class="nav">
+                <nav>
+                    <a href="#about-us">About us</a>
+                    <a href="#sale">Sale</a>
+                    <a href="#collection">Collection</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#contact-us">Contact us</a>
+                    <a href="product-page.html">Products</a>
+                </nav>
+            </div>
+            <div class="social-media-logos">
+                <nav>
+                    <a href="https://www.youtube.com/"> <img width="35" src="img/icons/icon-youtube.png"
+                            alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img width="25" src="img/icons/icon-facebook.png"
+                            alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img width="25" src="img/icons/icon-instagram.png"
+                            alt="Instagram logo"></a>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
