--- a/index.html
+++ b/index.html
@@ -267,7 +267,6 @@
             <p>Pay for your orders with credit cards, PayPal, AliPay, and other payment methods.</p>
         </div>
 
-        </div>
 
         <!--Block Ira end-->
 
@@ -502,31 +501,31 @@
         </div>
 
         <div>
-            <img src="img/480.jfif" alt="turquoise-sneakers">
+            <img src="img/turquoise-sneakers.jfif" alt="turquoise-sneakers">
             <p>$62,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/480 (2).jfif" alt="black-sneakers">
+            <img src="img/black-sneakers.jfif" alt="black-sneakers">
             <p>$60,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/480 (1).jfif" alt="girl-in-a-blue-jacket">
+            <img src="img/girl-in-a-blue-jacket.jfif" alt="girl-in-a-blue-jacket">
             <p>$85,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/480 (3).jfif" alt="girl-in-a-red-coat">
+            <img src="img/girl-in-a-red-coat.jfif" alt="girl-in-a-red-coat">
             <p>$60,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/480 (4).jfif" alt="black-sneakers-with-a-white-stripe">
+            <img src="img/black-sneakers-with-a-white-stripe.jfif" alt="black-sneakers-with-a-white-stripe">
             <p>$200,00</p>
             <button>Add to Card</button>
         </div>
@@ -542,7 +541,7 @@
                 <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for
                     better. We work only with the best sport brands to ensure that your training is really effective and
                     comfortable.</p>
-                <button class="learn-more"><a href="#learn-more">Learn More</a></button>
+                <a href="#learn-more">Learn More</a>
             </div>
             <div class="workout-woman-img">
                 <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
