Changed paths in index.css, some changes in header, burger menu, product page and footer

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </p>
         </div>
         <div class="container">
+            <label class="burger-icon" for="burger-checkbox">☰</label>
+            <input type="checkbox" id="burger-checkbox">
             <div class="logo">
                 <a href="#"> <img width="200" src="img/logo.svg" alt="logo"></a>
-                <label class="burger-icon" for="burger-checkbox">☰</label>
-                <input type="checkbox" id="burger-checkbox" />
             </div>
             <div class="nav">
                 <nav>
@@ -456,13 +456,13 @@
     </main>
     <!--Block 11-12 end-->
     <footer>
-        <img src="img/logo.svg" alt="logo">
+        <img width="300" src="img/logo.svg" alt="logo">
         <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for better.
         </p>
         <div class="foot">
             <div class="second-nav">
                 <h3>Navigation</h3>
-                <hr>
+                <hr id="second-nav-hr">
                 <nav>
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
@@ -473,7 +473,7 @@
             </div>
             <div class="shop-now-nav">
                 <h3>Shop</h3>
-                <hr>
+                <hr id="shop-now-hr">
                 <nav>
                     <a href="#woman">Woman</a>
                     <a href="#men">Men</a>
@@ -484,7 +484,7 @@
             </div>
             <div class="follow-us">
                 <h3>Follow Us</h3>
-                <hr>
+                <hr class="follow-us-hr">
                 <nav>
                     <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png"
                             alt="Youtube logo"></a>
@@ -494,7 +494,9 @@
                             alt="Instagram logo"></a>
                 </nav>
             </div>
-            <hr>
+            <div>
+                <hr class="botton-hr">
+            </div>
             <div class="all-rights-reserved">
                 <p>© Created by</p>
                 <p>ALL RIGHTS RESERVED</p>
