--- a/product-page.html
+++ b/product-page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/html" href="index.html">
     <link rel="stylesheet" href="css/product-page.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/burger-menu.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 <body>
@@ -19,7 +20,9 @@
         </div>
         <div class="container">
             <div class="logo">
-                <a href="#"> <img width="200" src="img/logo.svg" alt="logo"></a>
+                <a href="index.html"> <img width="200" src="img/logo.svg" alt="logo"></a>
+                <label class="burger-icon" for="burger-checkbox">☰</label>
+                <input type="checkbox" id="burger-checkbox">
             </div>
             <div class="nav">
                 <nav>
