--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
             </section>
         </div>
         <div class="our-newsletter">
-            <div class="special-offer">
+            <div class="icon-offer">
                 <img width="40" src="img/icons/mail-logo.svg" alt="Mail logo">
             </div>
             <div class="text-offer">
-                <p> 10% OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
+                <p> 10% OFF YOUR FIRST ORDER. <br> SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
             </div>
-            <form action="#">
+            <form class="form-newsletter" action="#">
                 <ul>
                     <li>
                         <input type="email" name="user_mail" value="Your email address">
