--- a/index.html
+++ b/index.html
@@ -73,23 +73,25 @@
 
         <!--Block Ira start-->
 
-        <div class="menu-number-one">
-            <div class="first-block">
-                <div class="first-div">
-                    <p class="menu-newarriwals">NEW ARRIWALS.</p>
+        <div class="menu-new-arrivals">
+            <div class="block-new-arrival">
+                <div class="div-new-arrival">
+                    <p class="menu-newarriwals">NEW ARRIVALS.</p>
+                    <hr>
                     <button>Shop Collection</button>
                 </div>
             </div>
 
-            <div class="second-block">
-                <div class="second-div">
+            <div class="block-trainers">
+                <div class="div-trainers">
                     <p>TRAINERS.</p>
+                    <hr>
                     <button>Shop Collection</button>
                 </div>
             </div>
 
-            <div class="third-block">
-                <div class="third-div">
+            <div class="block-hot-sale">
+                <div class="div-hot-sale">
                     <p>HOT SALE.</p>
                     <hr>
                     <button>Shop Collection</button>
