--- a/index.html
+++ b/index.html
@@ -107,25 +107,25 @@
 
         <div class=benefits>
             <div>
-                <img src="img/truck.svg" alt="truck">
+                <img src="img/why-choose-us/truck.svg" alt="truck">
                 <p>FREE SHIPING OVER $90</p>
                 <p>Get advantage of our free worldwide shipping on all orders over $90.</p>
             </div>
 
             <div>
-                <img src="img/box.svg" alt="box">
+                <img src="img/why-choose-us/box.svg" alt="box">
                 <p>EASY 30-DAY RETURN</p>
                 <p>If the item does not suit you, please send it back to us within 30 days.</p>
             </div>
 
             <div>
-                <img src="img/plant.svg" alt="plant">
+                <img src="img/why-choose-us/plant.svg" alt="plant">
                 <p>ECO MATERIALS</p>
                 <p>All items are made with at least 30% recycled materials and zero virgin polyester.</p>
             </div>
 
             <div>
-                <img src="img/card.svg" alt="card">
+                <img src="img/why-choose-us/card.svg" alt="card">
                 <p>20 PAYMENT METHODS</p>
                 <p>Pay for your orders with credit cards, PayPal, AliPay, and other payment methods.</p>
             </div>
