--- a/index.html
+++ b/index.html
@@ -365,31 +365,31 @@
         </div>
 
         <div>
-            <img src="img/turquoise-sneakers.jfif" alt="turquoise-sneakers">
+            <img src="img/carousel-goods/turquoise-sneakers.jfif" alt="turquoise-sneakers">
             <p>$62,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/black-sneakers.jfif" alt="black-sneakers">
+            <img src="img/carousel-goods/black-sneakers.jfif" alt="black-sneakers">
             <p>$60,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="girl-in-a-blue-jacket.jfif" alt="girl-in-a-blue-jacket">
+            <img src="img/carousel-goods/girl-in-a-blue-jacket.jfif" alt="girl-in-a-blue-jacket">
             <p>$85,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/girl-in-a-red-coat.jfif" alt="girl-in-a-red-coat">
+            <img src="img/carousel-goods/girl-in-a-red-coat.jfif" alt="girl-in-a-red-coat">
             <p>$60,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
-            <img src="img/black-sneakers-with-a-white-stripe.jfif" alt="black-sneakers-with-a-white-stripe">
+            <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif" alt="black-sneakers-with-a-white-stripe">
             <p>$200,00</p>
             <button>Add to Card</button>
         </div>
