add css keep-fit-with-comfort

--- a/index.html
+++ b/index.html
@@ -389,7 +389,8 @@
         </div>
 
         <div>
-            <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif" alt="black-sneakers-with-a-white-stripe">
+            <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif"
+                alt="black-sneakers-with-a-white-stripe">
             <p>$200,00</p>
             <button>Add to Card</button>
         </div>
@@ -399,15 +400,19 @@
         <!--Pavlo-->
         <div id="workout-woman">
             <div class="keep-fit-with-confort">
-                <p>100% ORIGINAL BRANDS</p>
-                <h2>KEEP FIT WITH COMFORT.</h2>
-                <p><span>Top Brands.</span><span>Delivery With DHL.</span><span>Easy return</span></p>
-                <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies
+                <p class="original-brand">100% ORIGINAL BRANDS</p>
+                <h2 class="keep-fit">KEEP FIT WITH COMFORT.</h2>
+                <div class="keep-fit-with-confort-icon">
+                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Top Brands</span>
+                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Delivery With DHL</span>
+                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Easy return</span>
+                </div>
+                <p class="workout-offers-fitness">Workout offers fitness clothing and footwear for those who want to change their lives and bodies
                     for
                     better. We work only with the best sport brands to ensure that your training is really effective
                     and
                     comfortable.</p>
-                <a href="#learn-more">Learn More</a>
+               <button class="keep-learn-more"><a href="#about-us">Learn More</a></button>
             </div>
             <div class="workout-woman-img">
                 <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
