--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                 <div class="div-new-arrival">
                     <p class="menu-newarriwals">NEW ARRIVALS.</p>
                     <hr>
-                    <button>Shop Collection</button>
+                    <button class="newarrival-button">Shop Collection</button>
                 </div>
             </div>
 
             <div class="block-trainers">
                 <div class="div-trainers">
-                    <p>TRAINERS.</p>
+                    <p class="text-trainers">TRAINERS.</p>
                     <hr>
                     <button>Shop Collection</button>
                 </div>
@@ -92,7 +92,7 @@
 
             <div class="block-hot-sale">
                 <div class="div-hot-sale">
-                    <p>HOT SALE.</p>
+                    <p class="text-hot-sale">HOT SALE.</p>
                     <hr>
                     <button>Shop Collection</button>
                 </div>
