--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="div-trainers">
                     <p class="text-trainers">TRAINERS.</p>
                     <hr>
-                    <button>Shop Collection</button>
+                    <button class="trainers-buttom">Shop Collection</button>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
                 <div class="div-hot-sale">
                     <p class="text-hot-sale">HOT SALE.</p>
                     <hr>
-                    <button>Shop Collection</button>
+                    <button class="hot-sale-buttom">Shop Collection</button>
                 </div>
             </div>
 
