--- a/index.html
+++ b/index.html
@@ -430,22 +430,25 @@
             </section>
         </div>
         <div class="our-newsletter">
+            <div class="text-offer">
             <div class="icon-offer">
                 <img width="40" src="img/icons/mail-logo.svg" alt="Mail logo">
             </div>
-            <div class="text-offer">
-                <p> 10% OFF YOUR FIRST ORDER. <br> SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
+            
+                <p> <span class="header-dot-style">10%</span> OFF YOUR FIRST ORDER. <br> SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
             </div>
-            <form class="form-newsletter" action="#">
+            <div class="form-newsletter">
+            <form action="#">
                 <ul>
                     <li>
-                        <input type="email" name="user_mail" value="Your email address">
+                        <input type="email" name="user_mail" placeholder="Your email address">
                     </li>
                     <li>
                         <button type="submit">Subscribe</button>
                     </li>
                 </ul>
             </form>
+            </div>
         </div>
         <div class="map-and-contacts">
             <iframe
