--- a/index.html
+++ b/index.html
@@ -26,31 +26,29 @@
             </p>
         </div>
         <div class="container">
-            <div class="logo">
-                <a href="#"> <img width="200" src="img/logo.svg" alt="logo"></a>
-                <label class="burger-icon" for="burger-checkbox">☰</label>
-                <input type="checkbox" id="burger-checkbox">
-            </div>
-            <div class="nav">
-                <nav>
+            <nav>
+                <div class="logo">
+                    <a href="index.html"> <img width="200" src="img/logo.svg" alt="logo"></a>
+                    <label class="burger-icon" for="burger-checkbox">☰</label>
+                    <input type="checkbox" id="burger-checkbox">
+                </div>
+                <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
                     <a href="#collection">Collection</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact-us">Contact us</a>
                     <a href="product-page.html">Products</a>
-                </nav>
-            </div>
-            <div class="social-media-logos">
-                <nav>
+                </div>
+                <div class="social-media-logos">
                     <a href="https://www.youtube.com/"> <img width="35" src="img/icons/icon-youtube.png"
                             alt="Youtube logo"></a>
                     <a href="https://www.facebook.com/"> <img width="25" src="img/icons/icon-facebook.png"
                             alt="Facebook logo"></a>
                     <a href="https://www.instagram.com/"> <img width="25" src="img/icons/icon-instagram.png"
                             alt="Instagram logo"></a>
-                </nav>
-            </div>
+                </div>
+            </nav>
         </div>
     </header>
     <main>
@@ -403,16 +401,20 @@
                 <p class="original-brand">100% ORIGINAL BRANDS</p>
                 <h2 class="keep-fit">KEEP FIT WITH COMFORT.</h2>
                 <div class="keep-fit-with-confort-icon">
-                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Top Brands</span>
-                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Delivery With DHL</span>
-                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Easy return</span>
+                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Top
+                        Brands</span>
+                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Delivery
+                        With DHL</span>
+                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Easy
+                        return</span>
                 </div>
-                <p class="workout-offers-fitness">Workout offers fitness clothing and footwear for those who want to change their lives and bodies
+                <p class="workout-offers-fitness">Workout offers fitness clothing and footwear for those who want to
+                    change their lives and bodies
                     for
                     better. We work only with the best sport brands to ensure that your training is really effective
                     and
                     comfortable.</p>
-               <button class="keep-learn-more"><a href="#about-us">Learn More</a></button>
+                <button class="keep-learn-more"><a href="#about-us">Learn More</a></button>
             </div>
             <div class="workout-woman-img">
                 <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
@@ -431,23 +433,24 @@
         </div>
         <div class="our-newsletter">
             <div class="text-offer">
-            <div class="icon-offer">
-                <img width="40" src="img/icons/mail-logo.svg" alt="Mail logo">
-            </div>
-            
-                <p> <span class="header-dot-style">10%</span> OFF YOUR FIRST ORDER. <br> SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER. </p>
+                <div class="icon-offer">
+                    <img width="40" src="img/icons/mail-logo.svg" alt="Mail logo">
+                </div>
+
+                <p> <span class="header-dot-style">10%</span> OFF YOUR FIRST ORDER. <br> SIGN UP TO OUR NEWSLETTER TO
+                    GET THIS SPECIAL OFFER. </p>
             </div>
             <div class="form-newsletter">
-            <form action="#">
-                <ul>
-                    <li>
-                        <input type="email" name="user_mail" placeholder="Your email address">
-                    </li>
-                    <li>
-                        <button type="submit">Subscribe</button>
-                    </li>
-                </ul>
-            </form>
+                <form action="#">
+                    <ul>
+                        <li>
+                            <input type="email" name="user_mail" placeholder="Your email address">
+                        </li>
+                        <li>
+                            <button type="submit">Subscribe</button>
+                        </li>
+                    </ul>
+                </form>
             </div>
         </div>
         <div class="map-and-contacts">
