--- a/product-page.html
+++ b/product-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,9 @@
     <title>Workout</title>
     <link rel="stylesheet" type="text/html" href="index.html">
     <link rel="stylesheet" href="css/product-page.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/burger-menu.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
+
 <body>
     <header>
         <div class="return-period">
@@ -19,32 +19,31 @@
             </p>
         </div>
         <div class="container">
-            <div class="logo">
-                <a href="index.html"> <img width="200" src="img/logo.svg" alt="logo"></a>
-                <label class="burger-icon" for="burger-checkbox">☰</label>
-                <input type="checkbox" id="burger-checkbox">
-            </div>
-            <div class="nav">
-                <nav>
+            <nav>
+                <div class="logo">
+                    <a href="index.html"> <img width="200" src="img/logo.svg" alt="logo"></a>
+                    <label class="burger-icon" for="burger-checkbox">☰</label>
+                    <input type="checkbox" id="burger-checkbox">
+                </div>
+                <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
                     <a href="#collection">Collection</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact-us">Contact us</a>
                     <a href="product-page.html">Products</a>
-                </nav>
-            </div>
-            <div class="social-media-logos">
-                <nav>
+                </div>
+                <div class="social-media-logos">
                     <a href="https://www.youtube.com/"> <img width="35" src="img/icons/icon-youtube.png"
                             alt="Youtube logo"></a>
                     <a href="https://www.facebook.com/"> <img width="25" src="img/icons/icon-facebook.png"
                             alt="Facebook logo"></a>
                     <a href="https://www.instagram.com/"> <img width="25" src="img/icons/icon-instagram.png"
                             alt="Instagram logo"></a>
-                </nav>
-            </div>
+                </div>
+            </nav>
         </div>
     </header>
 </body>
+
 </html>
