--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
 
         <!--Block ira-->
         <section class="deal-of-the-month">
-            <h2>DEAL OF THE MONTH.</h2>
-            <p>PUMA SPORTS BRA $50 $70</p>
-            <p>Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
-            <a href="#more-details">More Details</a>
+            <h2 class="text-deal-of-the-month">DEAL OF THE MONTH.</h2>
+            <p class="text-puma-sports">PUMA SPORTS BRA $50 $70</p>
+            <p class="text-start-your">Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
+            <a class="text-more-details" href="#more-details">More Details</a>
             <img src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman">
             <div class="countdown">
                 <p>Here must be countdown</p>
@@ -357,31 +357,35 @@
         </section>
 
         <div>
-            <p>NEW ARRIVALS.</p>
-            <p>Be the first to buy new items by leading brands.</p>
-            <button>More product</button>
+            <p class="text-arrivals">NEW ARRIVALS.</p>
+            <p class="text-be-first">Be the first to buy new items by leading brands.</p>
+            <button class="text-more-product">More product</button>
         </div>
 
         <div>
             <img src="img/carousel-goods/turquoise-sneakers.jfif" alt="turquoise-sneakers">
+            <p>Puma Textile Running Shoes</p>
             <p>$62,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
             <img src="img/carousel-goods/black-sneakers.jfif" alt="black-sneakers">
+            <p>Adidas Black Trainers</p>
             <p>$60,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
             <img src="img/carousel-goods/girl-in-a-blue-jacket.jfif" alt="girl-in-a-blue-jacket">
+            <p>Nike Winter Jacket in Blue</p>
             <p>$85,00</p>
             <button>Add to Card</button>
         </div>
 
         <div>
             <img src="img/carousel-goods/girl-in-a-red-coat.jfif" alt="girl-in-a-red-coat">
+            <p>Reebok Red Duster</p>
             <p>$60,00</p>
             <button>Add to Card</button>
         </div>
@@ -389,6 +393,7 @@
         <div>
             <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif"
                 alt="black-sneakers-with-a-white-stripe">
+                <p>Asics Jordan 2000</p>
             <p>$200,00</p>
             <button>Add to Card</button>
         </div>
