--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
             <div>
                 <img src="img/why-choose-us/plant.svg" alt="plant">
                 <p class="text-eco-materials">ECO MATERIALS</p>
-                <p class="text-all-items-are-made">All items are made with at least 30% recycled materials and zero virgin polyester.</p>
+                <p class="text-all-items-are-made">All items are made with at least 30% recycled materials and zero
+                    virgin polyester.</p>
             </div>
 
             <div>
                 <img src="img/why-choose-us/card.svg" alt="card">
                 <p class="text-payment-methods">20 PAYMENT METHODS</p>
-                <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other payment methods.</p>
+                <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other payment
+                    methods.</p>
             </div>
         </div>
 
