--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
         <section class="deal-of-the-month">
             <h2 class="text-deal-of-the-month">DEAL OF THE MONTH.</h2>
             <p class="text-puma-sports">PUMA SPORTS BRA $50 $70</p>
-            <p class="text-start-your">Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
+            <p class="text-start-your">Start your fitness story right away with this comfortable bra and get advantage
+                of our discount.</p>
             <a class="text-more-details" href="#more-details">More Details</a>
             <img src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman">
             <div class="countdown">
@@ -396,7 +397,7 @@
         <div>
             <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif"
                 alt="black-sneakers-with-a-white-stripe">
-                <p>Asics Jordan 2000</p>
+            <p>Asics Jordan 2000</p>
             <p>$200,00</p>
             <button>Add to Card</button>
         </div>
@@ -409,11 +410,11 @@
                 <p class="original-brand">100% ORIGINAL BRANDS</p>
                 <h2 class="keep-fit">KEEP FIT WITH COMFORT.</h2>
                 <div class="keep-fit-with-confort-icon">
-                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Top
+                    <img width="20" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Top
                         Brands</span>
-                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Delivery
+                    <img width="20" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Delivery
                         With DHL</span>
-                    <img width="20px" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Easy
+                    <img width="20" src="img/main-collection/down-arrow-2.img" alt="down-arrow-2.img"><span> Easy
                         return</span>
                 </div>
                 <p class="workout-offers-fitness">Workout offers fitness clothing and footwear for those who want to
@@ -422,7 +423,7 @@
                     better. We work only with the best sport brands to ensure that your training is really effective
                     and
                     comfortable.</p>
-                <button class="keep-learn-more"><a href="#about-us">Learn More</a></button>
+                <a class="keep-learn-more" href="#about-us">Learn More</a>
             </div>
             <div class="workout-woman-img">
                 <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
@@ -465,14 +466,14 @@
             <iframe
                 src="
                 https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.4185754150153!2d-74.18139188459445!3d40.73081427932994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2537102f5f5df%3A0xc3d5dc357162b4ec!2zMzI1IFVuaXZlcnNpdHkgQXZlLCBOZXdhcmssIE5KIDA3MTAyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1636233117165!5m2!1sru!2sua"
-                width="100%" height="600" style="border:0;" allowfullscreen=""  loading="lazy"></iframe>
-        <div id="contact-us">
-            <h2>Contacts <span class="header-dot-style">.</span></h2>
-            <address>325 University Ave
-                Newark, NJ 07102</address>
-            <a href="tel:+12345678900">+12345678900</a>
-            <a href="email:workout@email.com">workout@email.com</a>
-        </div>
+                width="1600" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div id="contact-us">
+                <h2>Contacts <span class="header-dot-style">.</span></h2>
+                <address>325 University Ave
+                    Newark, NJ 07102</address>
+                <a href="tel:+12345678900">+12345678900</a>
+                <a href="email:workout@email.com">workout@email.com</a>
+            </div>
         </div>
     </main>
     <!--Block 11-12 end-->
